--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,13 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="generator" content="Siteleaf, http://siteleaf.com" />
-  <title>{{site.title}} | {{title}}</title>
+  <title>{{title}} | {{site.title}}</title>
   <link rel="canonical" href="{{permalink}}" />
   <link rel="alternate" type="application/rss+xml" href="{{site.feed_url}}" />
-  <link rel="stylesheet" type="text/css" href="/styles/css/global.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/css/global.css" />
 </head>
 <body>
   {{ content }}
-
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="/scripts/js/min/application.js"></script>
 
   {{ footer_scripts }}
 </body>
