--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,12 +4,13 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="generator" content="Siteleaf, http://siteleaf.com" />
-  <title>{{title}} | {{site.title}}</title>
+  <title>{{page.title}} | {{site.title}}</title>
   <link rel="canonical" href="{{permalink}}" />
   <link rel="alternate" type="application/rss+xml" href="{{site.feed_url}}" />
-  <link rel="stylesheet" type="text/css" href="/assets/css/global.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/styles/global.css" />
 </head>
 <body>
+  {{ page.title }}
   {{ content }}
 
   {{ footer_scripts }}
