Use github-pages gem, add seo tag and sample config

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -1,12 +1,12 @@
 ---
 ---
-@import 'toolbox';
+@import 'variables';
 
 * {
-  @include box-sizing(border-box)
+  box-sizing: border-box;
 }
 
 body{
-  background: #000;
+  background: $bg_body;
   color: #fff;
 }
