--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,13 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <meta name="generator" content="Siteleaf, http://siteleaf.com" />
-  <title>{{page.title}} | {{site.title}}</title>
-  <link rel="canonical" href="{{permalink}}" />
-  <link rel="alternate" type="application/rss+xml" href="{{site.feed_url}}" />
+
+  {% seo %}
+
+  {% if site.rss_url %}
+    <link rel="alternate" type="application/rss+xml" href="{{site.rss_url}}" />
+  {% endif %}
+
   <link rel="stylesheet" type="text/css" href="/assets/styles/global.css" />
 </head>
 <body>
